--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
 <script src="js/setup.js"></script>
 <script src="js/dialog.js"></script>
 <script src="js/avatar.js"></script>
+<script src="js/wizard.js"></script>
 
 </body>
 </html>
