--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
 </script>
 
 <script src="js/util.js"></script>
+<script src="js/svg2base64.js"></script>
 <script src="js/wizard.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/backend.js"></script>
